@@ -1,52 +1,62 @@
 #\#CIF_2.0
-data_complex
+data_[VALID]_complex
 loop_
 _category.key
 _category.complex_item
 1 42+111j
 2 -12.3-111j
-3 28-111i
-4 12.3(12)+111j
-5 12.3+111(12)j
-6 111j
-7 1+1.23E-12j
-8 1+.23E-12j
-9 1-1.23E-12j
-10 1-.23E-12j
-11 1+.23E-12j
-12 1+0.23E-12j
-13 1+1.E-12j
-14 1+1.23E12j
-15 1++.23E2j
-16 1+-1.23E12j
-17 1-.23E12j
-18 1+0.23E12j
-19 1+1.E12j
-20 1+1.23j
-21 1+.23j
-22 1-1.23j
-23 1-.23j
-24 1.23j
-25 1+0.23j
-26 1+1.j
-27 1-12i
-28 1++1.23E-12j
-29 1-1.E12j
-30 '1+23.23j'
-31
+3 12.3(12)+111j
+4 12.3+111(12)j
+5 12.3(10)+111(12)j
+6 1+1.23E-12j
+7 1+.23E-12j
+8 1-1.23E-12j
+9 1-.23E-12j
+10 1+.23E-12j
+11 1+0.23E-12j
+12 1+1.E-12j
+13 1+1.23E12j
+14 1-.23E12j
+15 1+0.23E12j
+16 1+1.E12j
+17 1+1.23j
+18 1+.23j
+19 1-1.23j
+20 1-.23j
+21 1+0.23j
+22 1+1.j
+23 1-1.E12j
+24 '1+23.23j'
+25 '1 + 2j'
+26 '1+ 2j'
+27 '1 +2j'
+28
 ;1+23.23j
 ;
-32 Text
-33 ''
-34 1+j
-35 '1+2j'
-36 "1+2j"
-37 '''1+2j'''
-38 """1+2j"""
-39
+29 '1+2j'
+30 "1+2j"
+31 '''1+2j'''
+32 """1+2j"""
+33
 ;1+2j
 ;
-40
+
+data_[INVALID]_complex
+loop_
+_category.key
+_category.complex_item
+1 28-111i
+2 111j
+3 1++.23E2j
+4 1+-1.23E12j
+5 1.23j
+6 1-12i
+7 1++1.23E-12j
+8 Text
+9 ''
+10 1+j
+11
 ;
 1+2j
 ;
+12 12.3(0.4)+111j
