@@ -1,5 +1,5 @@
 #\#CIF_2.0
-data_imag
+data_[VALID]_imag
 loop_
 _category.key
 _category.imag_item
@@ -7,46 +7,51 @@ _category.imag_item
 2 +111j
 3 -111j
 4 111(12)j
-5 1.23i
-6 -12i
-7 +1.23E-12j
-8 +.23E-12j
-9 -1.23E-12j
-10 -.23E-12j
-11 .23E-12j
-12 0.23E-12j
-13 1.E-12j
-14 +1.23E12j
-15 +.23E2j
-16 -1.23E12j
-17 -.23E12j
-18 0.23E12j
-19 1.E12j
-20 +1.23j
-21 +.23j
-22 -1.23j
-23 -.23j
-24 .23j
-25 0.23j
-26 1.j
-27 12i
-28 ++1.23E-12j
-29 1.E12j
-30 '23.23j'
-31
+5 +1.23E-12j
+6 +.23E-12j
+7 -1.23E-12j
+8 -.23E-12j
+9 .23E-12j
+10 0.23E-12j
+11 1.E-12j
+12 +1.23E12j
+13 +.23E2j
+14 -1.23E12j
+15 -.23E12j
+16 0.23E12j
+17 1.E12j
+18 +1.23j
+19 +.23j
+20 -1.23j
+21 -.23j
+22 .23j
+23 0.23j
+24 1.j
+25 1.E12j
+26 '23.23j'
+27
 ;23.23j
 ;
-32 Text
-33 ''
-34 j
-35 '2j'
-36 "2j"
-37 '''2j'''
-38 """2j"""
-39
+28 '2j'
+29 "2j"
+30 '''2j'''
+31 """2j"""
+32
 ;2j
 ;
-40
+
+data_[INVALID]_imag
+loop_
+_category.key
+_category.imag_item
+1 1.23i
+2 -12i
+3 12i
+4 ++1.23E-12j
+5 Text
+6 ''
+7 j
+8
 ;
 2j
 ;
