@@ -9,7 +9,7 @@ data_FAKE_DIC
     _dictionary.title            FAKE_DIC
     _dictionary.class            Instance
     _dictionary.version          0.0.1
-    _dictionary.date             2018-01-08
+    _dictionary.date             2021-10-28
     _dictionary.uri              http://www.fake.org/fake.dic
     _dictionary.ddl_conformance  3.11.10
     _dictionary.namespace        FakeDic
@@ -21,7 +21,7 @@ data_FAKE_DIC
     _dictionary_audit.version
     _dictionary_audit.date
     _dictionary_audit.revision
-    0.0.1 2017-07-15 'Creating the dictionary'
+    0.0.1 2021-10-28 'Initial release of the dictionary.'
 
 save_PARENT
     _definition.id               PARENT
