@@ -1,9 +1,8 @@
-scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_imag: NOTE, data item '_category.imag_item' value '&#10;2j' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_imag: NOTE, data item '_category.imag_item' value '' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_imag: NOTE, data item '_category.imag_item' value '++1.23E-12j' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_imag: NOTE, data item '_category.imag_item' value '-12i' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_imag: NOTE, data item '_category.imag_item' value '1.23i' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_imag: NOTE, data item '_category.imag_item' value '111(12)j' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_imag: NOTE, data item '_category.imag_item' value '12i' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_imag: NOTE, data item '_category.imag_item' value 'Text' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_imag: NOTE, data item '_category.imag_item' value 'j' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_[INVALID]_imag: NOTE, data item '_category.imag_item' value '&#10;2j' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_[INVALID]_imag: NOTE, data item '_category.imag_item' value '' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_[INVALID]_imag: NOTE, data item '_category.imag_item' value '++1.23E-12j' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_[INVALID]_imag: NOTE, data item '_category.imag_item' value '-12i' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_[INVALID]_imag: NOTE, data item '_category.imag_item' value '1.23i' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_[INVALID]_imag: NOTE, data item '_category.imag_item' value '12i' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_[INVALID]_imag: NOTE, data item '_category.imag_item' value 'Text' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_060.inp data_[INVALID]_imag: NOTE, data item '_category.imag_item' value 'j' violates content type constraints -- the value should be a floating-point imaginary number expressed as a real number with the imaginary unit suffix 'j' , i.e. -42j.
