@@ -1,13 +1,12 @@
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '&#10;1+2j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '1++.23E2j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '1++1.23E-12j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '1+-1.23E12j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '1+j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '1-12i' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '1.23j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '111j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '12.3(12)+111j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '12.3+111(12)j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value '28-111i' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
-scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_complex: NOTE, data item '_category.complex_item' value 'Text' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '&#10;1+2j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '1++.23E2j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '1++1.23E-12j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '1+-1.23E12j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '1+j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '1-12i' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '1.23j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '111j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '12.3(0.4)+111j' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value '28-111i' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
+scripts/ddlm_validate: tests/cases/ddlm_validate_061.inp data_[INVALID]_complex: NOTE, data item '_category.complex_item' value 'Text' violates content type constraints -- the value should be a complex number consisting of a real part expressed as a real number and the imaginary part expressed as a real number with the imaginary unit suffix 'j', i.e. -3.14+42j.
