@@ -20,6 +20,8 @@ cod-tools (unreleased)
     - COD::CIF::DDL::DDLm::Validate:
         - updated the check_su_eligibility() subroutine to properly handle
           the special case of the '_description_example.case' attribute.
+        - updated the handling of 'Imag' and 'Complex' data types to allow
+          standard uncertainties.
 
 cod-tools (3.3.0)
 
